changed the css framework

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,18 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>{{ site.title }}</title>
-    <link rel="stylesheet" href="https://cdn.simplecss.org/simple.css">
+    <link href="//fonts.googleapis.com/css?family=Raleway:400,300,600" rel="stylesheet" type="text/css">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/skeleton.css">
 </head>
+
 <body>
-    <header>
-        <h1>Curriculum Vitae</h1>
-    </header>
-    <main>
-{{ content }}
-    </main>
-    <footer></footer>
+    <div class="container">
+        <div class="row">
+            <div class="columns twelve">
+                <header>
+                    <h1>Curriculum Vitae</h1>
+                </header>
+            </div>
+        </div>
+        <main class="row">
+            <div class="two columns">&nbsp;</div>
+            <div class="eight columns">
+                {{ content }}
+            </div>
+            <div class="two columns">&nbsp;</div>
+        </main>
+        <footer>
+            &nbsp;
+        </footer>
+    </div>
 </body>
+
 </html>
