--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -135,7 +135,7 @@ body {
   font-size: 1.5em; /* currently ems cause chrome bug misinterpreting rems on body element */
   line-height: 1.6;
   font-weight: 400;
-  font-family: 'Libre Baskerville', serif;
+  font-family: 'Inter', sans-serif;
   color: #222; }
 
 
@@ -145,11 +145,17 @@ h1, h2, h3, h4, h5, h6 {
   margin-top: 0;
   margin-bottom: 2rem;
   font-weight: 300; }
-h1 { font-size: 4.0rem; line-height: 1.2;  letter-spacing: -.1rem;}
+h1 { 
+  font-size: 4.0rem; 
+  font-weight: bolder;
+  line-height: 1.2;  
+  letter-spacing: -.1rem;
+  letter-spacing: 3px;
+}
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
 h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
-h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; }
+h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; font-weight:600;}
 h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
 
 /* Larger than phablet */
@@ -301,7 +307,7 @@ label > .label-body {
 ul {
   list-style: circle inside; }
 ol {
-  list-style: decimal inside; text-indent: -20px; margin-left: 15px; }
+  list-style: decimal inside; text-indent: -22px; margin-left: 15px; }
 ol, ul {
   padding-left: 0;
   margin-top: 0; }
@@ -311,9 +317,8 @@ ol ol,
 ol ul {
   margin: 1.5rem 0 1.5rem 3rem;
   font-size: 90%; }
-li {
-  margin-bottom: 1.5rem; }
-  ol>li {margin-bottom: 2rem;}
+li {margin-bottom: 1.5rem; }
+ol>li {margin: 0 0 2rem 20px;}
 
 
 /* Code
