--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -149,8 +149,8 @@ h1 {
   font-size: 4.0rem; 
   font-weight: bolder;
   line-height: 1.2;  
-  letter-spacing: -.1rem;
   letter-spacing: 3px;
+  letter-spacing: 0;
 }
 h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
