--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -36,11 +36,13 @@ footer {
   width: 50%;
   margin: 35px auto 50px auto;
 }
-.edu-tbl {overflow-y: scroll;}
+
 
 .new-tab-icon {
   vertical-align: -10%;
 }
+.pdf-link {text-decoration:none;}
+.pdf-link:hover {text-decoration: underline;}
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
