update publications with new entries and modify existing details

--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -43,6 +43,7 @@ footer {
 }
 .pdf-link {text-decoration:none;}
 .pdf-link:hover {text-decoration: underline;}
+.pdf {white-space: nowrap;}
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
