--- a/css/skeleton.css
+++ b/css/skeleton.css
@@ -25,7 +25,7 @@
 - Media Queries
 */
 
-/* Custon Code
+/* Custom Code
 ---------------------------------------------------*/
 header {
   text-align: center;
@@ -44,6 +44,10 @@ footer {
 .pdf-link {text-decoration:none;}
 .pdf-link:hover {text-decoration: underline;}
 .pdf {white-space: nowrap;}
+
+.bold {
+  font-weight: bold;
+}
 /* Grid
 –––––––––––––––––––––––––––––––––––––––––––––––––– */
 .container {
@@ -163,7 +167,7 @@ h2 { font-size: 3.6rem; line-height: 1.25; letter-spacing: -.1rem; }
 h3 { font-size: 3.0rem; line-height: 1.3;  letter-spacing: -.1rem; }
 h4 { font-size: 2.4rem; line-height: 1.35; letter-spacing: -.08rem; }
 h5 { font-size: 1.8rem; line-height: 1.5;  letter-spacing: -.05rem; font-weight:600;}
-h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0; }
+h6 { font-size: 1.5rem; line-height: 1.6;  letter-spacing: 0;}
 
 /* Larger than phablet */
 @media (min-width: 550px) {
@@ -314,7 +318,7 @@ label > .label-body {
 ul {
   list-style: circle inside; }
 ol {
-  list-style: decimal inside; text-indent: -22px; margin-left: 15px; }
+  margin-left: 15px; }
 ol, ul {
   padding-left: 0;
   margin-top: 0; }
@@ -374,7 +378,6 @@ blockquote,
 dl,
 figure,
 table,
-p,
 ul,
 ol,
 form {
