include designation and institution

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -30,6 +30,8 @@
                 {{ range .Site.Data.profile.personal_info }}
                   <p>
                     <b>Name:</b> {{ .name }} <br>
+                    <b>Designation:</b> {{ .designation }} <br>
+                    <b>Institution:</b> {{ .institution }} <br>
                     <b>Address:</b> {{ .address }}<br>
                     <b>DOB:</b> {{ .dob }} <br>
                     <b>Email:</b> <a href="mailto:{{ .email }}">{{ .email }}</a><br>
